// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot tests AddRow 1`] = `
<div
  className="sc-AxirZ dAVawm"
>
  <form
    style={
      Object {
        "display": "block",
      }
    }
  >
    <input
      aria-label="button to add todo item"
      autoFocus={true}
      className="sc-AxiKw gVLkSS"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="E.g. do a tech test"
      type="text"
      value=""
    />
    <button
      className="sc-AxhCb jnEOsd"
      onClick={[Function]}
      type="submit"
    >
      Add
    </button>
  </form>
</div>
`;

exports[`snapshot tests InputForm 1`] = `
<form
  style={
    Object {
      "display": "block",
    }
  }
>
  <input
    aria-label="test label"
    autoFocus={true}
    className="sc-AxiKw gVLkSS"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="test placeholder"
    type="text"
    value=""
  />
  <button
    className="sc-AxhCb jnEOsd"
    onClick={[Function]}
    type="submit"
  >
    test button
  </button>
</form>
`;

exports[`snapshot tests todoRow 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "minHeight": 70,
      "transform": " scale(1)",
    }
  }
>
  <div
    className="sc-AxirZ dAVawm"
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <form
      style={
        Object {
          "display": "none",
        }
      }
    >
      <input
        aria-label="button to update item"
        autoFocus={true}
        className="sc-AxiKw gVLkSS"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="test description"
        type="text"
        value="test description"
      />
      <button
        className="sc-AxhCb jnEOsd"
        onClick={[Function]}
        type="submit"
      >
        update
      </button>
    </form>
    <div
      className="sc-AxirZ dAVawm"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <input
        className="sc-AxiKw gVLkSS"
        defaultChecked={false}
        onChange={[Function]}
        type="checkbox"
      />
      <h2
        checked={false}
        className="sc-AxhUy iXfeIL"
        onClick={[Function]}
      >
        test description
      </h2>
      <button
        aria-label="Remove a todo item"
        className="sc-AxhCb jnEOsd"
        onClick={[Function]}
      >
        remove
      </button>
    </div>
  </div>
</div>
`;
